# TheSlowBrain

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.clawpatch/: config.json  project.json
docs/: HOW_IT_WORKS.md  README.md  index.html
learn/: build_it.py  tiny_nn.py  zero_to_hero.html
scripts/: apply_human_labeling_csv.py  build_broker_health_report.py  build_human_labeling_pack.py  build_live_execution_preview.py  experiment_mlp_pullback.py  experiment_mlp_sequential.py  experiment_nn_technicals.py  experiment_per_company.py  experiment_profit_loss.py  experiment_pullback.py  experiment_pullback_managed.py  experiment_pullback_stress.py  experiment_signal_sweep.py  experiment_tesla_trade.py  experiment_tsla_candles.py  import_legacy_stock_data.py  ingest_enriched_labels.py  install_daily_task.ps1  pull_ohlcv_indicators.py  run_daily_slowbrain.py  run_demo_cycle.py  run_first_slowbrain_cycle.py  run_shadow_cycles.py  send_eric_telegram.py  submit_live_orders.py
tests/: test_accounting_cio.py  test_backtest_optimizer.py  test_data_import.py  test_data_quality.py  test_eval_council.py  test_human_labeling.py  test_indicator_features.py  test_indicators.py  test_legacy_price_cache.py  test_pr12_real_features.py  test_pr2_edge_cases.py  test_pr4_review2_remediation.py  test_pr5_review3_work_order.py  test_pr6_market_data.py  test_pr7_rich_labels.py  test_pr8_mega_sprint.py  test_pr9_gating_model.py  test_shadow_runner.py  test_slowbrain_core.py  test_technical_context.py  test_telegram.py  test_workflow.py
(+87 files in other folders)
