[project]
name = "the-slow-brain"
version = "0.1.0"
description = "Profit-seeking Slow Brain stock trading research and paper/shadow decision system."
requires-python = ">=3.13"
dependencies = [
    "openai>=2.38,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.18,<1.19",
  "pytest-cov>=7.0,<8.0",
  "pytest>=9.0.3",
  "ruff>=0.14,<0.15",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/slowbrain"]

[tool.coverage.report]
fail_under = 93
show_missing = true
